Added carrier thread logic with tests, wrote very detailled documentation